--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "C-Robert",
-  "version": "1.0.0",
-  "description": "Small project to track some cryptocurrencies",
-  "main": "/build/index.js",
-  "repository": "https://github.com/Vico1993/crobert",
-  "author": "Victor Piolin <victor.piolin@gmail.com>",
-  "license": "MIT"
+    "name": "crobert",
+    "version": "1.0.0",
+    "description": "Small project to track some cryptocurrencies",
+    "main": "/build/index.js",
+    "repository": "https://github.com/Vico1993/crobert",
+    "author": "Victor Piolin <victor.piolin@gmail.com>",
+    "license": "MIT",
+    "devDependencies": {
+        "typescript": "^4.2.4"
+    }
 }
