--- a/package.json
+++ b/package.json
@@ -6,7 +6,21 @@
     "repository": "https://github.com/Vico1993/crobert",
     "author": "Victor Piolin <victor.piolin@gmail.com>",
     "license": "MIT",
+    "files": [
+        "build"
+    ],
     "devDependencies": {
+        "@types/node": "^15.3.0",
+        "nodemon": "^2.0.7",
+        "ts-node": "^9.1.1",
         "typescript": "^4.2.4"
+    },
+    "scripts": {
+        "start": "node .",
+        "start:watch": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\""
+    },
+    "dependencies": {
+        "coinmarketcap-api": "^3.1.1",
+        "dotenv": "^9.0.2"
     }
 }
