--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
         "typescript": "^4.2.4"
     },
     "scripts": {
-        "start": "node .",
+        "start": "ts-node src/",
         "build": "tsc -p tsconfig.json",
         "start:watch": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\""
     },
     "dependencies": {
         "coinmarketcap-api": "^3.1.1",
-        "dotenv": "^9.0.2"
+        "dotenv": "^9.0.2",
+        "yup": "^0.32.9"
     }
 }
