--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build"
     ],
     "devDependencies": {
+        "@types/currency-formatter": "^1.5.0",
         "@types/node": "^15.3.0",
         "nodemon": "^2.0.7",
         "ts-node": "^9.1.1",
@@ -22,7 +23,9 @@
     },
     "dependencies": {
         "coinmarketcap-api": "^3.1.1",
+        "currency-formatter": "^1.5.8",
         "dotenv": "^9.0.2",
+        "telegraf": "^4.3.0",
         "yup": "^0.32.9"
     }
 }
