--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
         "@types/currency-formatter": "^1.5.0",
         "@types/node": "^15.3.0",
         "nodemon": "^2.0.7",
+        "prettier": "^2.3.0",
         "ts-node": "^9.1.1",
         "typescript": "^4.2.4"
     },
     "scripts": {
         "start": "ts-node src/",
         "build": "tsc -p tsconfig.json",
-        "start:watch": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\""
+        "start:watch": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\"",
+        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
     },
     "dependencies": {
         "coinmarketcap-api": "^3.1.1",
