--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "devDependencies": {
         "@types/currency-formatter": "^1.5.0",
         "@types/node": "^15.3.0",
+        "@typescript-eslint/eslint-plugin": "^4.24.0",
+        "@typescript-eslint/parser": "^4.24.0",
+        "eslint": "^7.26.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
         "nodemon": "^2.0.7",
         "prettier": "^2.3.0",
         "ts-node": "^9.1.1",
@@ -21,6 +26,7 @@
         "start": "ts-node src/",
         "build": "tsc -p tsconfig.json",
         "start:watch": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\"",
+        "lint": "eslint . --ext .ts",
         "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
     },
     "dependencies": {
