--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "dependencies": {
         "coinmarketcap-api": "^3.1.1",
         "currency-formatter": "^1.5.8",
+        "debug": "^4.3.1",
         "dotenv": "^9.0.2",
         "telegraf": "^4.3.0",
+        "telegraf-session-local": "^2.1.0",
         "yup": "^0.32.9"
     }
 }
