--- a/package.json
+++ b/package.json
@@ -1,41 +1,45 @@
 {
-    "name": "crobert",
-    "version": "1.0.0",
-    "description": "Small project to track some cryptocurrencies",
-    "main": "/build/index.js",
-    "repository": "https://github.com/Vico1993/crobert",
-    "author": "Victor Piolin <victor.piolin@gmail.com>",
-    "license": "MIT",
-    "files": [
-        "build"
-    ],
-    "devDependencies": {
-        "@types/currency-formatter": "^1.5.0",
-        "@types/node": "^15.3.0",
-        "@typescript-eslint/eslint-plugin": "^4.24.0",
-        "@typescript-eslint/parser": "^4.24.0",
-        "eslint": "^7.26.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^3.4.0",
-        "nodemon": "^2.0.7",
-        "prettier": "^2.3.0",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.2.4"
-    },
-    "scripts": {
-        "start": "ts-node src/",
-        "build": "tsc -p tsconfig.json",
-        "start:watch": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\"",
-        "lint": "eslint . --ext .ts",
-        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
-    },
-    "dependencies": {
-        "coinmarketcap-api": "^3.1.1",
-        "currency-formatter": "^1.5.8",
-        "debug": "^4.3.1",
-        "dotenv": "^9.0.2",
-        "telegraf": "^4.3.0",
-        "telegraf-session-local": "^2.1.0",
-        "yup": "^0.32.9"
-    }
+  "name": "crobert",
+  "version": "1.0.0",
+  "description": "Small project to track some cryptocurrencies",
+  "main": "/build/index.js",
+  "repository": "https://github.com/Vico1993/crobert",
+  "author": "Victor Piolin <victor.piolin@gmail.com>",
+  "license": "MIT",
+  "files": [
+    "build"
+  ],
+  "devDependencies": {
+    "@types/currency-formatter": "^1.5.0",
+    "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
+  },
+  "engines": {
+    "node": "12.16.3"
+  },
+  "scripts": {
+    "start": "ts-node src/",
+    "build": "tsc -p tsconfig.json",
+    "start:watch": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\"",
+    "lint": "eslint . --ext .ts",
+    "postinstall": "tsc",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+  },
+  "dependencies": {
+    "coinmarketcap-api": "^3.1.1",
+    "currency-formatter": "^1.5.8",
+    "debug": "^4.3.1",
+    "dotenv": "^9.0.2",
+    "telegraf": "^4.3.0",
+    "telegraf-session-local": "^2.1.0",
+    "yup": "^0.32.9"
+  }
 }
